Fixing qnd title on ios

--- a/modules/widgets/qnd-title/qnd-title.scss
+++ b/modules/widgets/qnd-title/qnd-title.scss
@@ -45,6 +45,7 @@ $module: '.qnd-title';
 
     .left {
       padding-top: 10px;
+      display: table-footer-group;
     }
 
     .search-component {
